# mx-scaling-tests

./: .gitignore  CNN experiments.ipynb  FINAL_RESULTS.md  INDEX.md  LARGE_MODEL_TEST_STATUS.md  MX_FORMAT_GUIDE.md  QUICKSTART.md  README.md  SUMMARY.md  TEST_RESULTS.md  UNDERSTANDING.md  main.py  monitor_test.sh  mx_bert_phi.py  mx_bert_phi_cpu.py  mx_bert_phi_gpus.py  mx_bert_phu_gpus_backup.py  mx_cnn.py  mx_cnn_intel.py  mx_cnn_intel_cifar.py  mx_cnn_quark.py  mx_lm_selective.py  mx_rn_mnv2.py  mx_scaling_log_gpu backup.txt  mx_scaling_log_gpu.txt  mx_selective_log.txt  new_requirements.txt  pyproject.toml  requirements-colab.txt  requirements.txt  rn_mnv2.py  test_mx_selective.sh
nc_workspace/2025-07-19_19-29-53/: history.snapshot
nc_workspace/2025-07-19_19-36-02/: history.snapshot
nc_workspace/2025-07-19_19-41-44/: history.snapshot
